--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HealthCare App</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Hello world</h1>
-</body>
+    <form action="{{ url_for('views.world_map') }}">
+      <input type="submit" value="World Map" />
+    </form>
+  </body>
 </html>
